# dart_cronet_sample

./: .gitignore  .packages  LICENSE  README.md  analysis_options.yaml  benchmark.sh  callback_handler.dart  generated_bindings.dart  main.dart  pubspec.yaml  sample_executor.dart  url_request_callback.dart
.github/workflows/: test-package.yml
alternative/: http_based.dart
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/cronet_sample/: CronetSamplePlugin.kt
benchmark/: benchmark.sh  http_based.dart
example/: README.md  main.dart  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/cronet_sample_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
example_dart/: pubspec.yaml
lib/: cronet_sample.dart  standalone.dart
lib/src/: callback_handler.dart  dylib_handler.dart  enums.dart  exceptions.dart  find_resource.dart  generated_bindings.dart  http_callback_handler.dart  http_client.dart  http_client_request.dart  http_client_response.dart  prepare_cronet.dart  quic_hint.dart
lib/src/native/wrapper/: build.sh  sample_executor.cc  wrapper.cc  wrapper.h
lib/src/wrapper/: build.sh  wrapper.h
linux/: CMakeLists.txt  cronet_sample_plugin.cc
linux/include/cronet_sample/: cronet_sample_plugin.h
test/: cronet_sample_test.dart  http_client_close_test.dart  http_request_exceptions_test.dart  http_responses_exceptions_test.dart  http_responses_new_api_test.dart  http_responses_test.dart
tool/: getMobileBinaries.dart  get_mobile_binaries.dart
windows/: CMakeLists.txt  cronet_sample_plugin.cpp
windows/include/cronet_sample/: cronet_sample_plugin.h
wrapper/: build.sh  sample_executor.cc  wrapper.cc  wrapper.h
